[package]
name = "build-trie"
description = "Procedural macro for generating match and state code representing a trie structure"
version = "0.1.1"
repository = "https://github.com/kaleidawave/build-trie"
authors = ["kaleidawave <kaleidawave@gmail.com>"]
keywords = ["parsing", "tokenization", "utils"]
categories = ["parsing"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"

